# udfs

./: .gitmodules  CMakeLists.txt  Makefile  README  README.md  build.cmd  build.sh  dfs_rom.s  uptx_rom.s
d6502/: CMakeLists.txt  Makefile  README  main.c
firmware/: Makefile  README  desc.c  desc.h  main.c  usbio.h
mmbeeb/: DFS-4C.ssd  README
server/: CMakeLists.txt  Makefile  README  main.c
udfs_rom/: Makefile  README  udfs_rom.s
uptx_rom/: Makefile  README  uptx_rom.s
xbm2bbc/: CMakeLists.txt  Makefile  README  main.c  mary.xbm
